fixed inputs by wrapping them in form tag

--- a/src/components/userProfileComponents/modals/modal.css
+++ b/src/components/userProfileComponents/modals/modal.css
@@ -21,6 +21,13 @@
     position: relative; 
 }
 
+.modal__form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    min-height: 180px
+}
+
 .modalBig {
     display: flex;
     flex-direction: column;
